--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <title>todo</title>
   </head>
-  <body class="bg-gray-600">
+  <body class="bg-gray-600 antialiased">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
